--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Discord bot for Omnivoracious Listeners",
   "main": "bot.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "test"
   },
